syntax = "proto3";
package tutorial;

option go_package = "github.com/lcmaguire/protoc-gen-go-goo/out";

service ExampleService {
    rpc GetExample(SearchRequest) returns (SearchResponse);
    rpc CreateExample(SearchRequest) returns (SearchResponse);
    rpc ListExamples(SearchRequest) returns (SearchResponse);
    rpc DeleteExamples(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
    string name = 1;
    string display_name = 2;
}

message SearchResponse {
    string name = 1;
}